--- a/css/styles.css
+++ b/css/styles.css
@@ -392,6 +392,12 @@ button {
   
   width: 408px;
   min-height: 576px;
+ 
+  padding-top: 72px;
+  padding-right: 24px;
+  padding-bottom: 24px;
+  padding-left: 24px;
+ 
 
   background-color: var(--color-dairy);
   border-radius: 4px;
@@ -401,6 +407,11 @@ button {
   transform: scale(1) translate(-50%,-50%);
   transition: transform 250ms cubic-bezier(0.4,0,0.2,1),
   opacity 250ms cubic-bezier(0.4,0,0.2,1);
+
+}
+
+.modal-wrapper {
+
 
 }
 
@@ -442,6 +453,219 @@ button {
 
 }
 
+/* Modal field */
+
+.modal-form {
+
+  display: flex;
+  flex-direction: column;
+
+
+}
+
+.modal-icon-wrapper {
+
+  display: block;
+
+  position: relative;
+}
+
+
+
+.modal-icon {
+
+  position: absolute;
+  top: 50%;
+  left: 16px;
+
+  transform: translateY(-50%);
+  
+  fill: var(--color-navy-blue);
+
+  transition: fill 250ms var(--cubic);
+  
+}
+
+.modal-text {
+
+  margin-bottom: 16px;
+
+  letter-spacing: 0.01em;
+  font-weight: 500;
+
+}
+
+
+
+.label {
+
+  margin-top: 8px;
+  margin-bottom: 4px;
+  
+
+  text-align: left;
+
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+
+  color: var(--color-light-slate);
+ 
+}
+
+.name-label {
+
+  letter-spacing: 0.04em;
+}
+
+.modal-input {
+
+  width: 100%;
+  height: 40px;
+
+  padding-left:38px;
+
+ 
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+
+  transition: border-color 250ms var(--cubic);
+}
+
+.modal-input:focus {
+  
+  outline: none;
+  border-color: var(--color-iris);
+}
+
+.modal-input:focus + .modal-icon {
+
+  fill: var(--color-iris);
+
+}
+
+
+.area-input {
+
+  resize: none;
+
+  height: 120px;
+  padding: 8px 16px;
+  margin-bottom: 16px;
+
+  line-height: 1.17;
+
+  border-radius: 4px;
+
+  transition: border-color 250ms var(--cubic);
+
+}
+
+.area-input:focus {
+
+  outline: none;
+  border-color: var(--color-iris);
+}
+
+.area-input::placeholder {
+
+  font-size: 12px;
+
+  color: rgba(46, 47, 66, 0.4);
+  
+}
+
+.agreement-label {
+
+  display: block;
+  margin-bottom: 24px;
+  
+  text-align: left;
+  padding-left: 24px;
+}
+
+.agreement-wrapper {
+
+  position: relative;
+
+
+}
+
+
+.agreement-input-wrapper {
+
+  font-size: 12px;
+  line-height: 1.17;
+
+  color: var(--color-light-slate);
+
+}
+
+.agreement-label::before {
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  content: '';
+
+  display: block;
+  width: 16px;
+  height: 16px;
+
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+   
+  transition: background-color 250ms var(--cubic),
+  border-color 250ms var(--cubic);
+}
+
+.agreement-input:checked + .agreement-label::before {
+
+  background-image: url(/images/check-mark.svg);
+  background-size: 10px 8px;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  background-color: var(--color-iris);
+  border-color: var(--color-iris);
+
+  
+}
+
+
+.agreement-link {
+
+  font-size: 12px;
+
+  color: var(--color-iris);
+  
+}
+
+
+.agreement-btn {
+
+  width: 169px;
+  min-height: 54px;
+  border: none;
+  margin: 0 auto;
+
+  color: var(--color-white);
+  background-color: var(--color-iris);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+
+}
+
+.agreement-btn:hover,
+.agreement-btn:focus {
+
+  background-color: var(--color-ocean);
+
+}
+
+
+
+
 
 
 /**
@@ -453,7 +677,6 @@ button {
 
   padding-top: 120px;
   padding-bottom: 120px;
-
   text-align: left;
 
 }
@@ -464,7 +687,6 @@ button {
   gap: 24px;
 
 }
-
 
 
 .feautures-item {
@@ -871,7 +1093,7 @@ button {
 .footer > .container {
 
   display: flex;
-  gap: 120px;
+  gap: 80px;
   align-items: baseline;
 
 }
@@ -881,6 +1103,7 @@ button {
   width: 264px;
   padding: 0;
   margin-left: 0;
+  margin-right: 40px;
 
 }
 
@@ -968,6 +1191,72 @@ button {
   background-color: var(--color-green);
   
 }
+
+/* footer-subscribe */
+
+
+.subscribe-label {
+
+  display: block;
+  margin-bottom: 16px;
+
+  color: var(--color-white);
+
+}
+
+.subscribe-wrapper {
+
+  display: flex;
+  gap: 24px;
+
+}
+
+.subscribe-input {
+
+  width: 264px;
+  height: 40px;
+  padding-left: 16px;
+  border: 1px solid var(--color-white);
+  border-radius: 4px;
+  
+  color: var(--color-white);
+  background-color: transparent;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+
+}
+
+.subscribe-input::placeholder {
+
+  color: var(--color-white);
+
+}
+
+
+.subscribe-btn {
+  
+  display: flex;
+  gap: 16px;
+  align-items: center;
+
+  padding: 8px 24px;
+  width: 165px;
+  height: 40px;
+  border: none;
+
+  background-color: var(--color-iris);
+  color: var(--color-white);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+}
+
+.footer-btn:hover,
+.footer-btn:focus {
+
+  background-color: var(--color-ocean);
+
+}
+
+
 
 /**
    |============================
