--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,27 @@
 
 }
 
+/* Animations  */
+
+@keyframes horizontal-shaking {
+
+  0% { transform: translateX(0) }
+  1.5%,4.5%,7.5% { transform: translateX(5px) }
+  3%,6%,9% { transform: translateX(-5px) }
+  10% { transform: translateX(0) }
+
+}
+
+@keyframes vertical-shaking {
+  0% { transform: translateY(0) }
+  1.5%,4.5%,7.5% { transform: translateY(5px) }
+  3%,6%,9% { transform: translateY(-5px) }
+  10% { transform: translateY(0) }
+}
+
+
+
+
 /**
   |============================
   | COMMON SETTINGS
@@ -346,7 +367,10 @@ button {
   transition-duration: 250ms;
   transition-timing-function: var(--cubic);
 
+  animation: horizontal-shaking 6s infinite;
+
 }
+
 
 .hero-btn:hover,
 .hero-btn:focus {
@@ -1246,6 +1270,8 @@ button {
   background-color: var(--color-iris);
   color: var(--color-white);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+  animation: vertical-shaking 6s infinite;
 
 }
 
